--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Simple Chronodex Tab",
-  "version": "0.1",
+  "version": "0.1.1",
   "description": "Daily planning tool",
   "author": "Harold Finch",
   "chrome_url_overrides" : {
@@ -11,7 +11,9 @@
     "storage"
   ],
   "icons": {
-    "16": "icon16.png",
-    "128": "icon128.png"
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
 }
